--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": "^7.0",
-        "illuminate/http": "5.5.x|5.6.x|5.7.x|5.8.*",
-        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.*",
-        "nesbot/carbon": "^1.32|^2"
+        "illuminate/http": "^6.0",
+        "illuminate/support": "^6.0",
+        "nesbot/carbon": "^2"
     },
     "autoload": {
         "psr-4": {
